Bug 77267 - RTF import: some paragraphs not centered in particular document
Summary: RTF import: some paragraphs not centered in particular document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0 target:4.2.5
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2014-04-10 12:00 UTC by Michael Stahl
Modified: 2015-12-17 12:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Stahl 2014-04-10 12:00:25 UTC
in the attachment of bug 74599 the paragraphs
"1" and "The problem heading" are not centered like they are
in Word (actually they don't have an Outline style in Word
so are not headings unlike the preceding ones).

was working in 3.6.7.2, broken in 4.0.0.3 => regression

also between the headings there are 2 empty paragraphs
with 1.27 cm first-line indent and "Justified" in Word/LO 3.6.7
but no indent/"Left" in LO 4.0.0.3
Comment 1 Michael Stahl 2014-04-10 15:39:19 UTC
bibisect says: 41c2b0375773b2d2945d75e255ea6bb6c7fd378d..9d83ad0e99ab182506be99f7d6a2bec7f6fbe8c6

regression from:

commit 9f5263c477b82fef5aa9c3e79fb6af92aa049e24
Author:     Miklos Vajna <vmiklos@suse.cz>
AuthorDate: Sun Nov 25 00:54:10 2012 +0100

    fdo#44736 RTF import: ignore direct formatting which equals to style
Comment 2 Miklos Vajna 2014-04-13 20:27:19 UTC
Aha -- the root cause is that \pard should reset the effect of \s<N>, the above commit just made it visible, as before there was only a semantic difference (the paragraph had the wrong style, but the layout was the same, due to direct formatting).
Comment 3 Commit Notification 2014-04-14 07:08:25 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=904630a2272ac4dd540939f8a462bff5d636f066

fdo#77267 RTF import: pard should reset current paragraph style



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Miklos Vajna 2014-04-15 20:25:33 UTC
-4-2 review: https://gerrit.libreoffice.org/9055
Comment 5 Commit Notification 2014-04-15 20:32:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b84fed9967cb3364c5f9eb1064ab04336cf4e822&h=libreoffice-4-2

fdo#77267 RTF import: pard should reset current paragraph style


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Robinson Tryon (qubit) 2015-12-17 12:38:02 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]