fdo#77267 RTF import: pard should reset current paragraph style

Change-Id: I8d78ce262a4e57161325231a78e48750909b1bad